added headings and a list

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 <body>
   <div><p>test</p></div>  
   <div><p>1</p></div>
+  <h1>learn how to use list</h1>
+  <ul>
+    <li>Cookies</li>
+    <li>Milk</li>
+  </ul>
+  <div>2</div>
 </body>
 </html>
