--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
   <div><p>test</p></div>  
   <div><p>1</p></div>
+  <!-- practising how to add headings and lists-->
   <h1>learn how to use list</h1>
   <ul>
-    <li>Cookies</li>
+    <li>Cookies</li> 
     <li>Milk</li>
   </ul>
   <div>2</div>
