--- a/index.html
+++ b/index.html
@@ -65,75 +65,13 @@
       <!-- Bootstrap Javascript -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <footer>
-      </footer>
-   </body>
-</html><!DOCTYPE html>
-<html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-      <link href="style.css" rel="stylesheet" type="text/css">
-      <title>Mikel's chess page</title>
-   </head>
-   <body>
-      <!--bootstrap navbar-->
-      <header>
-         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Mikel's chess page</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-               <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                     <a class="nav-link" href="#">Products <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="#">Events</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Tutorial
-                     </a>
-                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                     </div>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link disabled" href="#">Disabled</a>
-                  </li>
-               </ul>
-               <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-               </form>
-            </div>
-         </nav>
-      </header>
-      <!--section for pruducts-->
-      <section>
-         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="chess-5879269_960_720.jpg" alt="Chess clock">
+         <div class="card">
             <div class="card-body">
-               <h5 class="card-title">Chess clock</h5>
-               <p class="card-text">Chess clock aproved by FIDE</p>
-            </div>
-            <div class="card-body">
-               <!--<a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
-                -->
+              <h5 class="card-title">Thank you for visiting our page</h5>
+              <p class="card-text">Chess is for everyone, now it's your move.</p>
+              <a href="https://www.facebook.com/KlubiShahutLezha/" class="btn btn-primary" target="_blank">Visit our Facebook</a>
             </div>
          </div>
-      </section>
-      <!-- Bootstrap Javascript -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-      <footer>
       </footer>
    </body>
 </html>
